# crew4ai-config

./: .gitignore  LICENSE  Makefile  README.md  __init__.py  crew4ai.sh  example_usage.py  main.py  pyproject.toml  requirements.txt  test_setup.py  verify_setup.sh
config/: agents.yaml  crewai_config.yaml  tasks.yaml
crews/: code_generation.py  code_recommendation.py  code_review.py  deployment_troubleshooter.py  full_project_implementation.py  project_analysis.py  project_planning.py  system_troubleshooter.py
docs/: uv_usage.md
examples/: code_review_example.py  new_crews_example.py  sample_code.py
tests/: test_setup.py
tools/: deployment_checker.py  documentation_generator.py  file_reader.py  log_analyzer.py  system_monitor.py
